Bug 177587 - Return a non-failure error code if fcntl file lock fails for an unknown reason (attempted use on a remote server) The app can then decide how to handle this situation. Chimera now ignores it and runs anyway.