mozilla/camino/src/preferences/PreferenceManager.mm
@@ -201,6 +201,9 @@ static BOOL gMadePrefManager;
       }
       return NO;
     }
+    else if (rv == NS_ERROR_PROFILE_SETLOCK_FAILED) {
+      NSLog(@"SetCurrentProfile returned NS_ERROR_PROFILE_SETLOCK_FAILED");
+    }
 
     nsCOMPtr<nsIPref> prefs(do_GetService(NS_PREF_CONTRACTID));
     mPrefs = prefs;
